updated endpoint obtenerPreguntasQuizz